fix: spacing and update readme

--- a/indigo/css/src/utilities/_grids.scss
+++ b/indigo/css/src/utilities/_grids.scss
@@ -8,16 +8,12 @@ $col-min: 34rem; // 34 * 16 = 544px
   display: grid;
   grid-template-columns: repeat(12, [col-start] 1fr);
   grid-auto-rows: auto;
-  column-gap: 32px;
-  // width: 100%;
 }
 
 .grid8 {
   display: grid;
   grid-template-columns: repeat(8, [col-start] 1fr);
   grid-auto-rows: auto;
-  gap: 1px;
-  width: 100%;
 }
 
 $gaps: (1, 2, 4, 8, 12, 16, 24, 32);
@@ -90,7 +86,7 @@ $frs: (1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12);
 
 @each $g in $gaps {
   .gap#{$g} {
-    width: #{$g}px;
+    gap: #{$g}px;
   }
 }
 
